# mini_engine

./: .gitignore  Cargo.toml  README.md  test.rs  txt.txt
engine/: Cargo.toml
engine/src/: config.rs  engine.rs  lib.rs  logic.rs  net.rs
hiredis-sys/: Cargo.toml  build.rs
hiredis-sys/src/: bindings.rs  bindings_full.rs  hiredis.rs  lib.rs  main.rs
logs/: test_log.log_2020-06-22_233434
mini_mysqlclient/: Cargo.toml
mini_mysqlclient/src/: config.rs  connect.rs  execute.rs  lib.rs  main.rs  qresult.rs  query_result.rs  result.rs  service.rs  sql_task.rs  task.rs  task_mgmt.rs  thread_pool.rs  workers.rs
mini_proxy/: Cargo.toml
mini_proxy/src/: auth.rs  config.rs  head_proto.rs  id_map.rs  lan_buf_rw.rs  lan_msg.rs  lan_service.rs  lan_tcp_rw.rs  lib.rs  main.rs  mucid_route.rs  net_auth.rs  net_message.rs  pid_map.rs  route_service.rs  service.rs  sproto_handle.rs  uid_map.rs  wan_buf_rw.rs  wan_msg.rs  wan_service.rs  wan_tcp_rw.rs  worker.rs
mini_service/: Cargo.toml
mini_service/src/: config.rs  conn_service.rs  head_proto.rs  lan_tcp_rw.rs  lib.rs  logic_service.rs  main.rs  net_buf_rw.rs  net_message.rs  proto_head.rs  service.rs
mini_socket/: Cargo.toml
mini_socket/src/: exc_kind.rs  lib.rs  message.rs  msg_kind.rs  os_epoll.rs  tcp_buf_rw.rs  tcp_connect.rs  tcp_connect_config.rs  tcp_connect_mgmt.rs  tcp_connect_service.rs  tcp_listen.rs  tcp_listen_config.rs  tcp_listen_service.rs  tcp_socket.rs  tcp_socket_mgmt.rs  tcp_socket_msg.rs  tcp_socket_reader.rs  tcp_socket_rw.rs  tcp_socket_writer.rs  tcpreader.rs
mini_test/: Cargo.toml
mini_test/src/: main.rs  test_tcp.rs  wan_tcp_rw.rs
mini_utils/: Cargo.toml  WTimer.cpp  WTimer.h
mini_utils/src/: bytes.rs  lib.rs  logger.rs  misc.rs  stack.rs  time.rs  timer.rs  wconfig.rs  worker.rs  worker_config.rs  wtimer.rs
mysql/: Cargo.toml
mysql/src/: anydata.rs  bindings_macos.rs  config.rs  connect.rs  lib.rs  main.rs  mysql.rs  mysqldata.rs  pool.rs  result.rs
mysqlclient/: Cargo.toml
mysqlclient-sys/: Cargo.toml  build.rs
mysqlclient-sys/src/: lib.rs
mysqlclient/src/: config.rs  connect.rs  dbtask.rs  lib.rs  main.rs  result.rs  task.rs  test.rs  threads.rs
net_agent/: Cargo.toml
net_agent/src/: engine.rs  lib.rs  logic.rs  logic_config.rs  logic_server.rs  main.rs  server.rs  tcp_config.rs
net_server/: Cargo.toml
net_server/src/: lib.rs  main.rs  server.rs  test_lib.rs
proto/: Cargo.toml  build.rs
proto/src/: main.rs  snazzy.items.rs
proto_desc/: Cargo.toml
proto_desc/src/: lib.rs  snazzy.items.rs
socket/: Cargo.toml
socket/src/: clients.rs  entity.rs  epevent.rs  epoll.rs  error_kind.rs  lib.rs  message.rs  neterrkind.rs  os_epoll.rs  os_socket.rs  resp_kind.rs  session.rs  tcp_bind.rs  tcp_client.rs  tcp_client_config.rs  tcp_client_mgmt.rs  tcp_connect.rs  tcp_connect_config.rs  tcp_connect_mgmt.rs  tcp_connect_server.rs  tcp_event copy.rs  tcp_event.rs  tcp_event2.rs  tcp_listen.rs  tcp_listen_config.rs  tcp_listen_server.rs  (+16 more)
test/: Cargo.toml
test/src/: closure.rs  error.rs  main.rs  test_tcp.rs  wan_buf_rw.rs
test_code/: Cargo.toml
utils/: Cargo.toml
(+14 files in other folders)
