[package]
name = "mini_mysqlclient"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
#mysqlclient-sys = "0.2.4"
mini_utils = { version = "0.1.0", path = "../mini_utils"}
mysqlclient-sys = { version = "0.2.4", path = "../mysqlclient-sys"}