[package]
name = "mini_proxy"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
serde_json = "1.0.57"
serde = { version = "1.0.114", features = ["derive"] }
mini_utils = { version = "0.1.0", path = "../mini_utils"}
mini_socket = { version = "0.1.0", path = "../mini_socket"}