[package]
name = "mini_test"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
#net_ = { version = "0.1.0", path = "../engine"}
mini_socket = { version = "0.1.0", path = "../mini_socket"}
mini_utils = { version = "0.1.0", path = "../mini_utils"}
#async-task = "3.0.0"
serde = {version = "*", features = ["derive"] }
serde_json = "1.0.57"
hiredis-sys = { version = "0.1.0", path = "../hiredis-sys"}