[package]
name = "net_agent"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
utils = { version = "0.1.0", path = "../utils"}
socket = { version = "0.1.0", path = "../socket"}