[package]
name = "test"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { version = "0.1.0", path = "../engine"}
socket = { version = "0.1.0", path = "../socket"}
utils = { version = "0.1.0", path = "../utils"}
#async-task = "3.0.0"
log = "0.4.0"
# simple_logger rust-simple_logger  env_logger = "0.7.1" 
simplelog = "^0.7.6"
# serde = {version = "*", features = ["derive"] }
# serde_json = "1.0.53"